--- a/public/index.html
+++ b/public/index.html
@@ -143,7 +143,7 @@
 						<label>Select Region</label>
 					</div>
 					<div class="input-field col s12 l6">
-						<select id="selectFarm" disabled>
+						<select id="selectFarm" disabled onchange="updateLoginBtnsState();">
 							<option value="" disabled selected>Choose farm</option>
 						</select>
 						<label>Select Farm</label>
@@ -151,14 +151,14 @@
 				</div>
 				<div class="row">
 					<div class="col s12 d-flex">
-						<a class="waves-effect waves-light btn mx-a dawn-orange" onclick="showAdvancedView();">
+						<a id="advancedLoginBtn" class="waves-effect waves-light btn mx-a forest-green" disabled onclick="showAdvancedView();">
 							This is my first time<i class="material-icons right">arrow_forward</i>
 						</a>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col s12 d-flex">
-						<a class="waves-effect waves-light btn mx-a poppy-red" onclick="showSimpleView();">
+						<a id="simpleLoginBtn" class="waves-effect waves-light btn mx-a dawn-orange" disabled onclick="showSimpleView();">
 							I've done this before<i class="material-icons right">arrow_forward</i>
 						</a>
 					</div>
@@ -356,6 +356,7 @@
 		</div>
 	</footer>
 
+	<!-- I should really use Gulp to compile these together... -->
 	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
