--- a/public/index.html
+++ b/public/index.html
@@ -48,9 +48,10 @@
 			<li class="tab col s3"><a class="active" href="#tab-0">Test 0</a></li>
 			<li class="tab col s3"><a href="#tab-1">Test 1</a></li>
 			<li class="tab col s3"><a href="#tab-2">Test 2</a></li>
-			<!-- <li class="tab col s3"><a href="#tab-3">Test 3</a></li>
+			<li class="tab col s3"><a href="#tab-3">Test 3</a></li>
 			<li class="tab col s3"><a href="#tab-4">Test 4</a></li>
-			<li class="tab col s3"><a href="#tab-5">Test 5</a></li> -->
+			<li class="tab col s3"><a href="#tab-5">Test 5</a></li>
+			<li class="tab col s3"><a href="#tab-6">Test 6</a></li>
 		</ul>
 		<section id="initialView" class="row centered">
 			<div class="row">
@@ -151,14 +152,16 @@
 				</div>
 				<div class="row">
 					<div class="col s12 d-flex">
-						<a id="advancedLoginBtn" class="waves-effect waves-light btn mx-a forest-green" disabled onclick="showAdvancedView();">
+						<a id="advancedLoginBtn" class="waves-effect waves-light btn mx-a forest-green" disabled
+							onclick="showAdvancedView();">
 							Jeg vil godt have hjælp<i class="material-icons right">arrow_forward</i>
 						</a>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col s12 d-flex">
-						<a id="simpleLoginBtn" class="waves-effect waves-light btn mx-a dawn-orange" disabled onclick="showSimpleView();">
+						<a id="simpleLoginBtn" class="waves-effect waves-light btn mx-a dawn-orange" disabled
+							onclick="showSimpleView();">
 							Jeg har gjort det her før<i class="material-icons right">arrow_forward</i>
 						</a>
 					</div>
@@ -181,13 +184,15 @@
 							<div class="input-field col s12 l6">
 								<input id="herdAmountCows" type="number" step="1" class="validate">
 								<label for="herdAmountCows">Antal køer</label>
-								<span class="helper-text" data-error="Must be a whole number (eg: 1)">Antal køer, i år</span>
+								<span class="helper-text" data-error="Must be a whole number (eg: 1)">Antal køer, i
+									år</span>
 							</div>
 							<div class="input-field col s12 l6">
 								<input id="herdMilkProduced" type="number" step="0.001" class="validate">
 								<label for="herdMilkProduced">Mælk produceret</label>
 								<span class="helper-text"
-									data-error="Must be a number with a maximum of 3 decimals (eg: 12.123)">kg. mælk produceret, i år</span>
+									data-error="Must be a number with a maximum of 3 decimals (eg: 12.123)">kg. mælk
+									produceret, i år</span>
 							</div>
 						</div>
 						<div class="row">
@@ -196,7 +201,8 @@
 									class="validate">
 								<label for="herdSelfSufficiency">Selvforsyning med foder</label>
 								<span class="helper-text"
-									data-error="Must be a number with a maximum of 3 decimals (eg: 12.123)">% af tørt stof</span>
+									data-error="Must be a number with a maximum of 3 decimals (eg: 12.123)">% af tørt
+									stof</span>
 							</div>
 							<div class="input-field col s12 l6">
 								<input id="cowsFeedConsumption" type="number" class="validate">
@@ -214,13 +220,15 @@
 								<input id="energyDiesel" type="number" step="0.001" class="validate">
 								<label for="energyDiesel">Diesel brugt på gården</label>
 								<span class="helper-text"
-									data-error="Must be a number with a maximum of 3 decimals (eg: 12.123)">Liter diesel brugt, i år</span>
+									data-error="Must be a number with a maximum of 3 decimals (eg: 12.123)">Liter diesel
+									brugt, i år</span>
 							</div>
 							<div class="input-field col s12 l6">
 								<input id="energyElectricity" type="number" step="0.001" class="validate">
-								<label for="energyElectricity">Energi  brugt på gården</label>
+								<label for="energyElectricity">Energi brugt på gården</label>
 								<span class="helper-text"
-									data-error="Must be a number with a maximum of 3 decimals (eg: 12.123)">kWh. energi brugt, i år</span>
+									data-error="Must be a number with a maximum of 3 decimals (eg: 12.123)">kWh. energi
+									brugt, i år</span>
 							</div>
 						</div>
 					</div>
@@ -248,22 +256,50 @@
 							<div class="input-field col s12">
 								<input id="herdAmountCows" type="number" step="1" class="validate">
 								<label for="herdAmountCows">Antal køer</label>
-								<span class="helper-text" data-error="Must be a whole number (eg: 1)">Antal køer, i år</span>
+								<span class="helper-text" data-error="Must be a whole number (eg: 1)">Antal køer, i
+									år</span>
 							</div>
+						</div>
+					</div>
+				</div>
+			</article>
+			<article id="tab-2" class="col s12 question-container">
+				<div class="row">
+					<div class="col s12 m10 l6 push-m1 push-l3">
+						<h2>Hyrde</h2>
+						<div class="row">
 							<div class="input-field col s12">
 								<input id="herdMilkProduced" type="number" step="0.001" class="validate">
 								<label for="herdMilkProduced">Mælk produceret</label>
 								<span class="helper-text"
-									data-error="Must be a number with a maximum of 3 decimals (eg: 12.123)">kg. mælk produceret, i år</span>
+									data-error="Must be a number with a maximum of 3 decimals (eg: 12.123)">kg. mælk
+									produceret, i år</span>
 							</div>
+						</div>
+					</div>
+				</div>
+			</article>
+			<article id="tab-3" class="col s12 question-container">
+				<div class="row">
+					<div class="col s12 m10 l6 push-m1 push-l3">
+						<h2>Hyrde</h2>
+						<div class="row">
 							<div class="input-field col s12">
 								<input id="herdSelfSufficiency" type="number" step="0.001" min="0.001" max="100"
 									class="validate">
 								<label for="herdSelfSufficiency">Selvforsyning med foder</label>
 								<span class="helper-text"
-									data-error="Must be a number with a maximum of 3 decimals (eg: 12.123)">% af tørt stof</span>
+									data-error="Must be a number with a maximum of 3 decimals (eg: 12.123)">% af tørt
+									stof</span>
 							</div>
 						</div>
+					</div>
+				</div>
+			</article>
+			<article id="tab-4" class="col s12 question-container">
+				<div class="row">
+					<div class="col s12 m10 l6 push-m1 push-l3">
+						<h2>Hyrde</h2>
 						<div class="row">
 							<div class="input-field col s12">
 								<input id="cowsFeedConsumption" type="number" class="validate">
@@ -274,7 +310,7 @@
 					</div>
 				</div>
 			</article>
-			<article id="tab-2" class="col s12 question-container">
+			<article id="tab-5" class="col s12 question-container">
 				<div class="row">
 					<div class="col s12 m10 l6 push-m1 push-l3">
 						<h2>Energi</h2>
@@ -283,13 +319,24 @@
 								<input id="energyDiesel" type="number" step="0.001" class="validate">
 								<label for="energyDiesel">Diesel brugt på gården</label>
 								<span class="helper-text"
-									data-error="Must be a number with a maximum of 3 decimals (eg: 12.123)">Liter diesel brugt, i år</span>
+									data-error="Must be a number with a maximum of 3 decimals (eg: 12.123)">Liter diesel
+									brugt, i år</span>
 							</div>
+						</div>
+					</div>
+				</div>
+			</article>
+			<article id="tab-6" class="col s12 question-container">
+				<div class="row">
+					<div class="col s12 m10 l6 push-m1 push-l3">
+						<h2>Energi</h2>
+						<div class="row">
 							<div class="input-field col s12">
 								<input id="energyElectricity" type="number" step="0.001" class="validate">
-								<label for="energyElectricity">Energi  brugt på gården</label>
+								<label for="energyElectricity">Energi brugt på gården</label>
 								<span class="helper-text"
-									data-error="Must be a number with a maximum of 3 decimals (eg: 12.123)">kWh. energi brugt, i år</span>
+									data-error="Must be a number with a maximum of 3 decimals (eg: 12.123)">kWh. energi
+									brugt, i år</span>
 							</div>
 						</div>
 					</div>
@@ -313,7 +360,10 @@
 			<article id="resultsYourData" class="col s12">
 				<h2 class="mt-0">Din data</h2>
 				<div class="chart-container">
-					<canvas id="canvas" class="graphCanvas"></canvas>
+					<canvas id="cows-vs-co" class="graphCanvas"></canvas>
+				</div>
+				<div class="chart-container">
+					<canvas id="co-vs-kg-milk" class="graphCanvas"></canvas>
 				</div>
 			</article>
 			<article id="resultsRegionData" style="display: none;" class="col s12">
