Forgot footer changes

--- a/public/index.html
+++ b/public/index.html
@@ -485,9 +485,9 @@
 					onclick="prevTab();">
 					<i class="material-icons left">arrow_back</i><span>Forrige</span>
 				</a>
-				<div id="progressTracker" class="ldBar label-top" data-preset="bubble" data-pattern-size="32"
-					data-fill="https://loading.io/mod/pattern/cloud/index.svg" style="width:36px;height:36px">
-				</div>
+				<div id="progressTracker" class="ldBar label-top" data-preset="bubble" data-fill-background="#0B43AA" data-pattern-size="32"
+                    data-fill="images/milk.svg" style="width:36px;height:36px">
+                </div>
 				<a id="nextTabBtn" class="waves-effect waves-light twilight-blue btn next-btn" onclick="nextTab();">
 					<i class="material-icons right">arrow_forward</i><span>Hyrde</span>
 				</a>
